[package]
name = "mc_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# parsing arguments
clap= "3.0.0-beta"

# reading from csv
csv = "1.1"

# serialization, deserialization
serde = {version = "1.0", features =["derive"]}

# socket5
tokio-socks = "0.5"

# for database stuff
tokio-stream = "0.1"

# tokio
tokio = { version = "1.7", features = ["full"] }

# async trait
async-trait = "0.1"

# dns
trust-dns-resolver = "0.20"

# encryption
aes = "0.7"
cfb8 = "0.7"

# zlib
flate2 = "1.0"

# get_u8, etc extensions
bytes = "1.0"

# threads
rayon = "1.5"

# mojang https api
reqwest = { version = "0.11", features = ["json", "socks"] }

# for minecraft auth RSA response
rsa-der = "0.2"
rsa = "0.4"

# used for RSA and random generation
rand = "0.8"

# mojang hash
num-bigint = "0.4"

# mojang hash
sha1 = "0.6"

# json parsing (particularly for mojang api)
serde_json = "1.0"

# quite a few uses
itertools = "0.10"

# for data storage
#flexbuffers = "2.0"
bincode = "1.3"

# chat parsing
regex = "1.5"

# efficient hashmap
indexmap = {version = "1.6", features = ["std"]}

float-ord = "0.3"

# for regex among other things .. this is included in std now
#once_cell = "1.8"



packets = { path = "packets" } # from a path in the local filesystem


[profile.release]
debug = true
#lto = "fat"
#codegen-units = 1
