[package]
name = "swarm-bot"
version = "0.4.1"
edition = "2021"
description = "A autonomous bot launcher for Minecraft"
license = "MIT"
readme = "README.md"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
repository = "https://github.com/andrewgazelka/SwarmBot"
homepage = "https://github.com/andrewgazelka/SwarmBot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# parsing arguments
clap = { version = "4.4.10", features = ["derive"] }

# reading from csv
csv = "1.3"

# serialization, deserialization
serde = { version = "1.0", features = ["derive"] }

# socks5
tokio-socks = "0.5"

# tokio
tokio = { version = "1.34", features = [
    "rt",
    "io-std",
    "io-util",
    "sync",
    "parking_lot",
] }

# dns
trust-dns-resolver = "0.23"

# encryption
aes = "0.8.3"

# zlib
#flate2 = {version = "1.0"}
flate2 = { version = "1.0", features = [
    "zlib-ng-compat",
], default-features = false }

# get_u8, etc extensions
bytes = "1.5"

# threads
rayon = "1.8"

# mojang https api
reqwest = { version = "0.11", features = ["json", "socks"] }

# for minecraft auth RSA response
rsa-der = "0.3"
rsa = { version = "0.9", features = ["pkcs5"] }

# used for RSA and random generation
rand = "0.8"

# mojang hash
num-bigint = "0.4"

# mojang hash
sha1 = "0.10"

# json parsing (particularly for mojang api)
serde_json = "1.0"

# quite a few uses
itertools = "0.11"

# for data storage

# chat parsing
regex = "1.10"

# efficient hashmap
indexmap = { version = "2.1", features = ["std"] }

float-ord = "0.3"

# for num casting
num = "0.4"

# for printing stuff out
crossterm = "0.27"

colored = "2.0"

# for small stack-allocated arrays
smallvec = { version = "1.11", features = ["const_generics"] }

# for parsing nbt
hematite-nbt = "0.5"

swarm-bot-packets = { path = "packets", version = "0.2.0" }

# so we don't have to use v-tables
tokio-tungstenite = "0.20.1"

futures = "0.3"

interfaces = { package = "swarmbot-interfaces", path = "interfaces", version = "0.1.2" }
anyhow = "1.0.75"
bincode = "2.0.0-rc.3"
hex-literal = "0.4.1"
cfb8 = "0.8"
tokio-stream = "0.1.14"
once_cell = { version = "1.18.0", features = ["parking_lot"] }
async-trait = "0.1.74"
tungstenite = "0.20.1"
generic-array = "1.0.0"
typenum = "1.17.0"
rustix = "0.38.25"
tracing = "0.1.40"

[dev-dependencies]
assert_matches = "1.5"
more-asserts = "0.3"
primes = "0.3"
rustix = "0.38.25"

[workspace]
members = ["packets", "interfaces", "swarmbot-cli"]

[profile.dev]
#split-debuginfo = "unpacked"
#opt-level = 1


#[profile.release]
#lto = "fat"
#codegen-units = 1

[lints.clippy]
complexity = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

module_name_repetitions = "allow"
future_not_send = "allow"

