[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json parsing (particularly for mojang api)
serde_json = "1.0"
# serialization, deserialization
serde = { version = "1.0", features = ["derive"] }

lazy_static = "1.4"


tokio-tungstenite = "0.17"
tungstenite = "0.17"
tokio = { version = "1.20", features = ["rt", "io-std", "io-util", "sync", "parking_lot", "macros"] }
futures = "0.3"

swarm-bot-packets = { path = "../packets", version = "0.2.0" }

colored = "2.0"

# chat parsing
regex = "1.5"

itertools = "0.10.3"
num = "0.4.0"
