[package]
name = "swarmbot-interfaces"
version = "0.1.2"
edition = "2021"
description = "Interfacs for swarmbot"
license = "MIT"

[dependencies]
# json parsing (particularly for mojang api)
serde_json = "1.0"
# serialization, deserialization
serde = { version = "1.0", features = ["derive"] }

tokio-tungstenite = "0.20.1"
tungstenite = "0.20.1"
tokio = { version = "1.24", features = [
    "rt",
    "io-std",
    "io-util",
    "sync",
    "parking_lot",
    "macros",
] }
futures = "0.3"

swarm-bot-packets = { path = "../packets", version = "0.2.0" }

colored = "2.0"

# chat parsing
regex = "1.5"

itertools = "0.10.3"
num = "0.4.0"
once_cell = { version = "1.18.0", features = ["parking_lot"] }
