[package]
name = "swarm-bot-packets"
version = "0.1.0"
edition = "2018"
description = "The packets component of swarm bot"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
swarm-bot-packets-macro = "0.1.0" # from a path in the local filesystem
tokio = { version = "1.5.0", features = ["full"] }
