[package]
name = "swarm-bot-packets"
version = "0.2.1"
edition = "2018"
description = "The packets component of swarm bot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
swarm-bot-packets-macro = { path = "packets_macro", version = "0.1.2" } # from a path in the local filesystem
tokio = { version = "1.33", features = ["full"] }
