[package]
name = "swarmbot-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swarmbot-interfaces = { path = "../interfaces" }
clap = { version = "4.1.1" , features = ["derive"]}
serde = "1.0"
tokio-tungstenite = "0.18"
tokio = { version = "1.24.1" , features = ["full"] }
anyhow = "1.0"
futures = "0.3"
serde_json = "1.0"